force-app/main/default/objects/Behavior_Foster_Notes__c/Behavior_Foster_Notes__c.object-meta.xml
<CustomObject>
    <label>Behavior Foster Notes</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Behavior Foster Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Foster Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>