force-app/main/default/objects/Behavior_Foster_Notes__c/fields/Behavior_Foster_Note__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Foster_Note__c</fullName>
    <label>Behavior Foster Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>