force-app/main/default/objects/Behavior_Foster_Notes__c/fields/Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>Capture_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Capture Date</label>
    <type>Date</type>
</CustomField>