force-app/main/default/objects/Behavior_Foster_Notes__c/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <label>Initials</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>